gruntfile: added autoprefixer, minor updates, added sticky footer styles by default, html document for fix bootstrap typografy to current projet

--- a/static/layouts/_includes/head.html
+++ b/static/layouts/_includes/head.html
@@ -1,5 +1,5 @@
 <!-- Boilerplate <HEAD></HEAD> content goes here -->
 
-<!-- Boilerplate modernizr file ( src="src/js/vendor/*.min.js" ) -->
+<!-- <script src="/src/js/vendor/modernizr.VER.min.js"></script> modernizr (boilerplate) -->
 
 <link rel="stylesheet" href="/src/css/app.css">
