--- a/static/src/less/app.less
+++ b/static/src/less/app.less
@@ -13,9 +13,10 @@
 //
 // Own styles // (goes before Bootstrap "Utility classes")
 
+@import "variables-base.less";
 @import "default.less";
-@import "assets.less"; // Grunt spritesheet styles.
-// @import "icons.less"; // Rewrited spritesheet classes.
+@import "~ui-icons.less"; // Grunt spritesheet styles.
+@import "icons.less"; // Rewrited spritesheet classes.
 
 // Site components
 @import "components/site-header.less";
@@ -28,7 +29,7 @@
 // @import "components/";
 @import "responsive.less";
 
-@import "vendor/slider.less";
+// @import "vendor/slider.less";
 
 // End own styles //
 //
