--- a/static/layouts/_includes/js.html
+++ b/static/layouts/_includes/js.html
@@ -2,11 +2,11 @@
 <!-- _____________________ -->
 
 <!-- googleapis jquery.min.js (stable version sets in boilerplate)-->
-<!-- static jquery.min.js ( src="/src/js/vendor/*.min.js" ) (boilerplate) -->
+<!-- <script src="/src/js/vendor/*.min.js"></script> (static jquery.min.js (from boilerplate) -->
 <!-- <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script> -->
 
 <!-- <script src="/src/js/vendor/slider.js"></script> -->
-<!-- bootstrap scripts ( <script src="/src/js/vendor/bootstrap/*.js"></script> ) -->
+<!-- <script src="/src/js/vendor/bootstrap/*.js"></script> (bootstrap scripts) -->
 
 <script src="/src/js/ui.js"></script>
 <script src="/src/js/app.js"></script>
