--- a/static/src/less/components/site-footer.less
+++ b/static/src/less/components/site-footer.less
@@ -1,6 +1,8 @@
 .site-footer {
+	// Sticky footer
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	height: @site-footer-height;
+	// End sticky footer
 }
