update: sticky footer; grunt sprite task; link statement; rub sign; minor fixes/updates

--- a/static/src/less/app.less
+++ b/static/src/less/app.less
@@ -10,10 +10,12 @@
 // Ideil Atom
 @import "vars-atom.less";
 // @import "atom/link.less";
+// @import "atom/rub.less";
 // @import "atom/unit-addon.less";
 // @import "atom/dl-extension.less";
 // @import "atom/close-css.less";
 // @import "atom/radio-checkbox.less";
+// @import "atom/file-upload.less";
 // @import "atom/pseudo-order.less";
 // End Ideil Atom
 //
@@ -25,7 +27,6 @@
 // Own styles
 
 @import "vars-base.less";
-// @import "components/font.less";
 @import "default.less";
 @import "~ui-icons.less"; // Grunt spritesheet styles.
 @import "icons.less"; // Rewrited spritesheet classes.
