--- a/static/src/less/vars-base.less
+++ b/static/src/less/vars-base.less
@@ -1,2 +1,4 @@
 @wrap:                 1000px;
 @wrap-padding:         ceil(@grid-gutter-width / 2);
+
+@site-footer-height:   100px; // sticky footer state: must be rewriten
