--- a/static/src/less/atom/link.less
+++ b/static/src/less/atom/link.less
@@ -1,5 +1,7 @@
+button,
 a,
-button {
+a.title,
+a .title {
 	transition: @link-hover-transition;
 }
 
@@ -23,7 +25,7 @@ a {
 
 		&.title,
 		.title {
-			border-bottom: 1px dotted @text-color;
+			border-bottom: 1px dotted @link-border-color;
 		}
 
 		&:hover,
