added: custom fileupload; sticky header; slick default js init script; is-loading state; is-required state; custom select styles. updated: dl-extensions.

--- a/static/src/less/app.less
+++ b/static/src/less/app.less
@@ -9,14 +9,17 @@
 //
 // Ideil Atom
 @import "vars-atom.less";
+// @import "atom/sticky-header.less";
+// @import "atom/sticky-footer.less";
 // @import "atom/link.less";
-// @import "atom/rub.less";
-// @import "atom/unit-addon.less";
 // @import "atom/dl-extension.less";
+// @import "atom/object-components.less";
 // @import "atom/close-css.less";
 // @import "atom/radio-checkbox.less";
-// @import "atom/file-upload.less";
+// @import "atom/file-upload.less"; // file-upload.js is required
 // @import "atom/pseudo-order.less";
+// @import "atom/rub.less";
+@import "atom/optional.less";
 // End Ideil Atom
 //
 
