--- a/static/src/less/atom/dl-extension.less
+++ b/static/src/less/atom/dl-extension.less
@@ -23,13 +23,11 @@
 	dd {
 		display: inline;
 	}
+}
 
-	dd {
-		&:after {
-			content: "\A";
-			white-space: pre;
-		}
-	}
+.dl-couple dd:after {
+	content: "\A";
+	white-space: pre;
 }
 
 .dl-default {
