--- a/static/layouts/_includes/js.html
+++ b/static/layouts/_includes/js.html
@@ -8,5 +8,7 @@
 <!-- <script src="/src/js/vendor/slider.js"></script> -->
 <!-- <script src="/src/js/vendor/bootstrap/*.js"></script> (bootstrap scripts) -->
 
+<!-- <script src="/src/js/atom/*.js"></script> (atom scripts) -->
+
 <script src="/src/js/ui.js"></script>
 <script src="/src/js/app.js"></script>
