--- a/static/src/less/atom/file-upload.less
+++ b/static/src/less/atom/file-upload.less
@@ -1,35 +1,54 @@
-.add-file-btn {
-	position: relative;
-	height: 25px;
-	overflow: hidden;
-	width: 260px;
+// 	<div class="form-group">
+// 		<label for="fileUpload">Add file</label>
+//
+// 		<div class="o-pick-file">
+// 			<input type="file" id="fileUpload" class="js-file-upload" accept="" value="">
+// 			<span class="btn btn-default btn-sm">Upload file</span>
+// 			<span class="c-file-name js-file-name">file is not selected…</span>
+// 		</div>
+// 	</div>
 
-	input {
-		height: 44px;
-		margin-top: -22px;
-		margin-left: -115px;
-		outline: none !important;
-		position: relative;
+.o-pick-file {
+	position: relative;
+	z-index: 1;
+
+	// border: 1px solid #000; // dev
+
+	> input[type=file] { // native btn
+		position: absolute;
 		z-index: 2;
+		width: 200%;
+		height: 100%;
+		margin-left: -100%;
 		cursor: pointer;
 		color: transparent;
+		outline: none !important;
+
+		// background-color: rgba(0, 0, 0, .15); // dev
+
+		&:hover,
+		&:focus,
+		&.focus {
+			+ .btn {
+				background-color: darken(@btn-default-bg, 10%);
+				border-color: darken(@btn-default-border, 12%);
+
+			}
+		}
+
+		&:active,
+		&.active {
+			+ .btn {
+				box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+			}
+		}
 	}
 
-	a {
-		color: #000;
-		background-color: #efefef;
-		border-radius: 2px;
-		border: 1px solid #ccc;
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: 1;
-		cursor: pointer;
+	.btn { // pseudo btn
+		margin-right: @link-inline-indent;
 	}
 
-	.filename {
-		position: absolute;
-		top: 1px;
-		left: 110px;
+	.c-file-name { // file name place
+		color: @file-upload-name;
 	}
 }
