--- a/static/src/less/vars-atom.less
+++ b/static/src/less/vars-atom.less
@@ -3,35 +3,52 @@
 @normal:    300;
 @bold:      500;
 
-// Form (unit) addon
+//// Object components
+// Addon
 @addon-width:     25px;
 @addon-space:     10px; // 10px to left & 10px to right
 
-// Determinate list
-@dl-sm-dt-width:  floor(@component-offset-horizontal * 2/3); // 120px
-@dl-lg-dt-width:  ceil(@component-offset-horizontal * 4/3); // 240px
+// Caret
+@caret-bg-width:     floor(@input-height-small);
+@caret-width:        4px;
+//// End Object components
 
-@dl-default-dt-margin:   floor(@line-height-computed / 3);
-@dl-default-dd-margin:   @line-height-computed;
+// Determinate list
+@dl-sm-dt-width:        floor(@component-offset-horizontal * 2/3); // 120px
+@dl-lg-dt-width:        ceil(@component-offset-horizontal * 4/3); // 240px
+
+@dl-default-dt-margin:       floor(@line-height-computed / 3);
+@dl-default-dd-margin:       @line-height-computed;
 
 // Close css
-@close-length:    31px;
-@close-width:     1px;
+@close-length:      31px;
+@close-width:       1px;
 
 // Custom radio & checkbox
-// radio
-@radio-size:     26px;
-@radio-squeeze:  10px;
-@radio-indent:   7px;
+// Radio
+@radio-size:         26px;
+@radio-squeeze:      10px;
+@radio-indent:       7px;
 
-// checkbox
-@checkbox-size:     22px;
-@checkbox-indent:   7px;
-@check-width:       10px;
-@check-height:      24px;
+// Checkbox
+@checkbox-size:         22px;
+@checkbox-indent:       7px;
+@check-width:           10px;
+@check-height:          24px;
+// End Custom radio & checkbox
 
 // Link
 @link-hover-transition:        .3s;
-
-@link-border-color:            fade(@brand-primary, 50%);
 @link-hover-border-color:      @link-hover-color;
+@link-border-color:            fade(@brand-primary, 50%);
+@link-inline-indent:           7px;
+
+//// Optional
+// Loading state
+@loading-bg-color:       fade(@body-bg, 50%);
+
+// Required state
+@required-sign:                 '*';
+@required-sign-color:           @brand-danger;
+@required-sign-indent:          @link-inline-indent;
+//// End Optional
