--- a/static/src/less/vars-base.less
+++ b/static/src/less/vars-base.less
@@ -1,4 +1,6 @@
-@wrap:                 1000px;
-@wrap-padding:         ceil(@grid-gutter-width / 2);
+@wrap:                   1000px;
+@wrap-padding:           ceil(@grid-gutter-width / 2);
 
-@site-footer-height:   100px; // sticky footer state: must be rewriten
+@site-footer-height:     100px; // sticky footer state: must be rewriten
+
+@control-border-width:   1px; // default border-width for bootstrap controls & buttons
