--- a/static/layouts/_includes/tpl.page-home.html
+++ b/static/layouts/_includes/tpl.page-home.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html class="no-js">
 	<head>
-		<!-- @include head.html -->
+		<!-- @include app-head.html -->
 	</head>
-	<body class="page-home">
-		<!-- @include site-header.html -->
+	<body>
+		<!-- @include app-banner.html -->
 
-		<!-- @include _page-home.html -->
+		<!-- @include page-home.html -->
 
-		<!-- @include site-footer.html -->
-		<!-- @include js.html -->
+		<!-- @include app-contentinfo.html -->
+
+		<!-- @include app-js.html -->
 	</body>
 </html>
