--- a/static/src/less/atom/rub.less
+++ b/static/src/less/atom/rub.less
@@ -1,6 +1,6 @@
-// Russian ruble symbol ( ₽ )
 //
-// usage example: <span class="rub" aria-label="рубль"></span>
+// Russian ruble symbol (₽)
+// -----------------------------------------
 
 @font-face {
 	font-family: 'rub';
@@ -10,64 +10,7 @@
 	font-style: normal;
 }
 
-.rub:before {
+.c-rub:before {
 	font-family: 'rub';
-	// Arial Regular (sans-serif)
-	// content: 'a';
-
-	// Arial Italic
-	// content: 'b';
-
-	// Arial Bold
-	// content: 'c';
-
-	// Arial Bold Italic
-	// content: 'd';
-
-	// Georgia Regular (serif)
-	// content: 'e';
-
-	// Georgia Italic
-	// content: 'f';
-
-	// Georgia Bold
-	// content: 'g';
-
-	// Georgia Bold Italic
-	// content: 'h';
-
-	// Tahoma Regular (sans-serif)
-	// content: 'i';
-
-	// Tahoma Bold
-	// content: 'j';
-
-	// Times Regular (serif)
-	// content: 'k';
-
-	// Times Italic
-	// content: 'l';
-
-	// Times Bold
-	// content: 'm';
-
-	// Times Bold Italic
-	// content: 'n';
-
-	// Lucida Regular (sans-serif)
-	// content: 'o';
-
-	// Verdana Regular (sans-serif)
-	content: 'p';
-
-	// Verdana Italic
-	// content: 'q';
-
-	// Verdana Bold
-	// content: 'r';
-
-	// Verdana Bold Italic
-	// content: 's';
+	content: @rub;
 }
-
-// End Russian ruble symbol
