--- a/static/src/less/vars-atom.less
+++ b/static/src/less/vars-atom.less
@@ -1,54 +1,159 @@
-// Text/Typography
-@light:     100;
-@normal:    300;
-@bold:      500;
+//
+// Variables ATOM
+// ------------------------
 
-//// Object components
-// Addon
-@addon-width:     25px;
-@addon-space:     10px; // 10px to left & 10px to right
 
-// Caret
-@caret-bg-width:     floor(@input-height-small);
-@caret-width:        4px;
-//// End Object components
+//== Scaffolding
+//
+//## Settings for some of the most global styles.
 
-// Determinate list
+//** Link border width
+@link-border-width:            1px;
+//** Link border color
+@link-border-color:            fade(@brand-primary, 50%);
+//** Link hover border color
+@link-hover-border-color:      @link-hover-color;
+//** Text link border-color
+@link-text-border-color:       fade(@text-color, 40%);
+//** Link with action border style
+@link-action-style:            dotted;
+//** Top shift of icon inside link w/ title
+@link-icon-shift:              -7px;
+
+//** Global/default transition-duration for links, buttons and some interactive elements
+@transition-duration-base:        .3s;
+
+
+//== Close
+//
+//## Close icon based on CSS (easy way of sizing and coloring)
+
+//** Size
+@close-stick:          31px;
+@close-weight:         1px;
+//** Color
+@close-color:          @text-color;
+@close-color-active:   @brand-danger;
+
+
+//== Addon
+//
+//##
+
+@addon-width:      20px;
+@addon-indent:     5px; // addon indent on both sides (left, right)
+@addon-opacity:    .3;
+
+
+//== Type
+//
+//##
+
+//** Dl horizontal sizing
+// BS by default: `@component-offset-horizontal:  180px;`
 @dl-sm-dt-width:        floor(@component-offset-horizontal * 2/3); // 120px
 @dl-lg-dt-width:        ceil(@component-offset-horizontal * 4/3); // 240px
 
-@dl-default-dt-margin:       floor(@line-height-computed / 3);
-@dl-default-dd-margin:       @line-height-computed;
-
-// Close css
-@close-length:      31px;
-@close-width:       1px;
-
-// Custom radio & checkbox
-// Radio
-@radio-size:         26px;
-@radio-squeeze:      10px;
-@radio-indent:       7px;
-
-// Checkbox
-@checkbox-size:         22px;
-@checkbox-indent:       7px;
-@check-width:           10px;
-@check-height:          24px;
-// End Custom radio & checkbox
-
-// Link
-@link-hover-transition:        .3s;
+// Links
+@transition-duration-base:     .3s;
 @link-hover-border-color:      @link-hover-color;
 @link-border-color:            fade(@brand-primary, 50%);
 @link-inline-indent:           7px;
 
-//// Optional
-// Loading state
-@loading-bg-color:       fade(@body-bg, 50%);
 
-// Required state
-@required-sign:                 '*';
-@required-sign-color:           @brand-danger;
-@required-sign-indent:          @link-inline-indent;
-//// End Optional
+//== Forms
+//
+//##
+
+//** Base
+
+@control-border-width:     1px; // default border-width for bootstrap controls and buttons
+@control-text-indent:      @link-inline-indent;
+
+//** Required state (label)
+@required-mark:                 '*';
+@required-mark-color:           @brand-danger;
+@required-mark-indent:          @link-inline-indent;
+@required-mark-position:        right; // available: right, left
+
+//** Checkboxes & Radios (customize)
+@control-bg:                       @input-bg;
+@control-indicator-border-width:   @control-border-width;
+@control-border-color:             @input-border;
+
+//** Checkboxes
+@checkbox-size:           22px;
+@checkbox-radius:         4px;
+// CSS checkmark (✔) options
+@check-color:            @brand-primary;
+// CSS checkmark appearance
+@check-width:              1px; // weigh of checkmark
+@check-length-short:       10px;
+@check-length-long:        24px;
+// Outline of checkmark
+// IMPORTANT: 1. Color of outline and background color of ballot box are the same.
+//            2. If checkmark crosses ballot box then the background color of parent element must match the outline color (ballot background color).
+//            3. If background color of ballot box and color of the checkmark outline (ballot box background) is different, you have to fit checkmark in the ballot box.
+@check-space:              0;
+// Checkmark positionig
+@check-shift-bottom:       2px; // can't be a negative value
+@check-shift-horizontal:   0;
+
+//** Radios
+@radio-size:                 @checkbox-size;
+@radio-indicator-space:      2px;
+@radio-indicator-color:      @check-color;
+
+//** Files (upload)
+@file-focus-space:     3px;
+@file-name-color:      @text-color;
+
+
+//** Russian ruble symbol (₽)
+//
+// Available font families:
+// a — Arial Regular (sans-serif)
+// b — Arial Italic
+// c — Arial Bold
+// d — Arial Bold Italic
+// e — Georgia Regular (serif)
+// f — Georgia Italic
+// g — Georgia Bold
+// h — Georgia Bold Italic
+// i — Tahoma Regular (sans-serif)
+// j — Tahoma Bold
+// k — Times Regular (serif)
+// l — Times Italic
+// m — Times Bold
+// n — Times Bold Italic
+// o — Lucida Regular (sans-serif)
+// p — Verdana Regular (sans-serif)
+// q — Verdana Italic
+// r — Verdana Bold
+// s — Verdana Bold Italic
+@rub:  'p';
+
+
+//** Loading state
+@loader-bg:             #fff;
+@loader-width:          128px;
+@loader-img:            ~'preloader-default.gif';
+@loading-bg:            fade(#000, 40%);
+
+
+//** Slick (carousel) theme
+// arrows
+@btn-arrow-width:                  50px;
+@btn-arrow-height:                 @btn-arrow-width;
+@btn-arrow-bg:                     @body-bg;
+@btn-arrow-position-top:           50%;
+@btn-arrow-prev-position-left:     0;
+@btn-arrow-next-position-right:    0;
+// dots
+@nav-dots:                    false; // arrows position are related to nav dots wrapper height
+@nav-dots-wrap-height:        60px;
+@nav-dot-size:                15px;
+@nav-dot-bg:                  @brand-primary;
+@nav-dot-active-bg:           @body-bg;
+@nav-dot-active-contour:      outside; // available: inside, outside
+@nav-dot-radius:              50%;
