--- a/static/src/less/~ui-icons.less
+++ b/static/src/less/~ui-icons.less
@@ -1,1 +1,23 @@
-// Reserved for Grunt sprite task
+.icon {
+  background: url( '../img/sprites/ui-icons.png' ) no-repeat;
+  background-size: 20px 35px;
+}
+
+.icon.i-arrow-ltr {
+  width: 20px;
+  height: 35px;
+  background-position: 0px 0px;
+}
+
+
+
+@media (min--moz-device-pixel-ratio: 2),
+(-o-min-device-pixel-ratio: 2/1),
+(-webkit-min-device-pixel-ratio: 2),
+(min-device-pixel-ratio: 2) {
+.icon {
+  background: url( '../img/sprites/ui-icons@2x.png' ) no-repeat;
+  background-size: 20px 35px;
+}
+
+}
