bootstrap less files fix

--- a/generators/app/templates/static/src/less/app.less
+++ b/generators/app/templates/static/src/less/app.less
@@ -46,7 +46,7 @@
 
 // App components
 // ----------------------
-@import "components/theme-bootstrap.less";
+@import "components/theme-bs.less";
 @import "components/type.less";
 @import "components/grid.less";
 // @import "components/app-banner.less";
