update html structure; remove unnecessary roles; update class naming etc..

--- a/generators/app/templates/static/layouts/_includes/tpl.page-home.html
+++ b/generators/app/templates/static/layouts/_includes/tpl.page-home.html
@@ -6,9 +6,9 @@
 	<body>
 		<!-- @include app-banner.html -->
 
-		<!-- @include page-home.html -->
+		<!-- @include main-home.html -->
 
-		<!-- @include app-contentinfo.html -->
+		<!-- @include app-footer.html -->
 
 		<!-- @include app-js.html -->
 	</body>
