--- a/generators/app/templates/static/layouts/_includes/tpl.~guide-atom.html
+++ b/generators/app/templates/static/layouts/_includes/tpl.~guide-atom.html
@@ -152,7 +152,7 @@
 			</ul>
 		</div>
 
-		<!-- @include app-contentinfo.html -->
+		<!-- @include app-footer.html -->
 
 		<!-- @include app-js.html -->
 	</body>
