--- a/generators/app/templates/static/layouts/_includes/tpl.~typography-bs.html
+++ b/generators/app/templates/static/layouts/_includes/tpl.~typography-bs.html
@@ -187,7 +187,7 @@
 			</div>
 		</div>
 
-		<!-- @include app-contentinfo.html -->
+		<!-- @include app-footer.html -->
 
 		<!-- @include app-js.html -->
 	</body>
