--- a/generators/app/templates/static/src/less/app.less
+++ b/generators/app/templates/static/src/less/app.less
@@ -15,9 +15,6 @@
 // Bootstrap extensions
 // @import "atom/definition-lists.less";
 
-// CSS
-@import "atom/scaffolding.less";
-
 // Dependencies
 // @import "atom/rub.less";
 
@@ -47,13 +44,14 @@
 // App components
 // ----------------------
 @import "components/theme-bs.less";
+@import "components/scaffolding.less";
 @import "components/type.less";
 @import "components/grid.less";
 // @import "components/app-banner.less";
 @import "components/app-icons.less";
 @import "components/utilities.less";
 // @import "components/";
-// @import "components/app-contentinfo.less";
+// @import "components/app-footer.less";
 
 // App helpers
 // ----------------------
