--- a/generators/app/templates/static/src/less/components/app-banner.less
+++ b/generators/app/templates/static/src/less/components/app-banner.less
@@ -1,5 +1,5 @@
 //
-// Aplication banner (Header)
+// Aplication banner (header)
 // ----------------------------------
 
-// .c-banner {}
+// .c-app-banner {}
