--- a/generators/app/templates/static/src/less/components/grid.less
+++ b/generators/app/templates/static/src/less/components/grid.less
@@ -1,8 +1,8 @@
-// body {
-// 	min-width: @wrap; // not responsive state for desctops
-// }
+//
+// Grid
+// -------------------
 
-.o-wrap {
-	margin: 0 auto;
-	padding: 0 @wrap-padding;
+body {
+	max-width: 100%;
 }
+
