--- a/generators/app/templates/static/src/less/vars-app.less
+++ b/generators/app/templates/static/src/less/vars-app.less
@@ -3,14 +3,24 @@
 // ------------------------
 
 
+//== Colors
+//
+//## Gray and brand colors for use across Bootstrap.
+
+@text-color-light:       (#fff - @text-color);
+
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
 
-//** Variables are better way to control `font-weight`, especially if you need change base font family
+//** Variables are better way to control `font-weight`
 @text-light:     300;
 @text-normal:    400;
 @text-bold:      700;
+
+//** Global/default transition-duration for links, buttons and some interactive elements
+@transition-duration-base:        .3s;
 
 
 //== Typography
@@ -25,7 +35,6 @@
 //##
 
 @grid-gutter-width-sm:        floor(@grid-gutter-width / 2);
-@wrap-padding:                @grid-gutter-width-sm;
 
 
 //==
@@ -34,8 +43,8 @@
 
 //** Fixed components
 // Insert the height of the finished component (necessarily)
-@banner-height:            auto;
-@contentinfo-height:       auto;
+// @app-banner-height:            auto; // reserved
+// @app-footer-height:            auto; // reserved
 //** Media queries breakpoints
-@screen-sticky-banner:            0px;
-@screen-sticky-contentinfo:       0px;
+// @screen-sticky-banner:         0px; // reserved
+// @screen-sticky-footer:         0px; // reserved
