"TODO" modifications. Update comments. Converting tabs to spaces. Generator minor update.

--- a/generators/app/templates/static/layouts/_includes/app-head.html
+++ b/generators/app/templates/static/layouts/_includes/app-head.html
@@ -1,4 +1,4 @@
-<!-- Boilerplate <HEAD></HEAD> content -->
+<!-- Boilerplate </head> content -->
 
 <!-- Replacement -->
 <link rel="stylesheet" href="/src/css/app.css">
