--- a/generators/app/templates/static/layouts/_includes/app-js.html
+++ b/generators/app/templates/static/layouts/_includes/app-js.html
@@ -1,8 +1,7 @@
 <!-- RESPECT THE ORDER-->
 
-<!-- 1. Lib -->
-<!-- googleapis jquery.min.js (stable version sets in boilerplate)-->
-<!-- <script src="/src/js/vendor/"></script> (static jquery.min.js (boilerplate) -->
+<!-- 1. Libraries -->
+<!-- <script src="/src/js/vendor/"></script> -->
 
 <!-- 2. Map -->
 <!-- <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script> -->
@@ -18,4 +17,3 @@
 
 <!-- 6. Base -->
 <script src="/src/js/ui.js"></script>
-<script src="/src/js/app.js"></script>
