--- a/generators/app/templates/static/src/less/atom/labels.less
+++ b/generators/app/templates/static/src/less/atom/labels.less
@@ -1,9 +1,11 @@
+//# Labels
 //
-// Labels
-// --------------------------------
+//*
 
-// States
-// ----------------
-.is-required {
-	.required(@required-mark-position);
+//## States
+//
+//*
+
+.is-required { // label
+    .required(@required-mark-position);
 }
