--- a/generators/app/templates/static/src/less/atom/mixins.less
+++ b/generators/app/templates/static/src/less/atom/mixins.less
@@ -1,6 +1,8 @@
-// Mixins
-// --------------------------------------------------
+//# Mixins
+//
+//*
 
-// Components
+@import "mixins/utilities.less";
 @import "mixins/buttons.less";
 @import "mixins/labels.less";
+@import "mixins/scroll.less";
