--- a/generators/app/templates/static/src/less/atom/rub.less
+++ b/generators/app/templates/static/src/less/atom/rub.less
@@ -1,16 +1,16 @@
+//# Russian ruble symbol (₽)
 //
-// Russian ruble symbol (₽)
-// -----------------------------------------
+//*
 
 @font-face {
-	font-family: 'rub';
-	src: url('../font/rub/rub.woff') format('woff'),
-			 url('../font/rub/rub.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'rub';
+    src: url('../font/rub/rub.woff') format('woff'),
+             url('../font/rub/rub.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .c-rub:before {
-	font-family: 'rub';
-	content: @rub;
+    font-family: 'rub';
+    content: @rub;
 }
