--- a/generators/app/templates/static/src/less/components/app-banner.less
+++ b/generators/app/templates/static/src/less/components/app-banner.less
@@ -1,5 +1,18 @@
+//# Aplication banner
 //
-// Aplication banner (header)
-// ----------------------------------
+//*
 
-// .c-app-banner {}
+// .c-banner {}
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {
+//     .c-banner {}
+// }
+
+// @media screen and (min-width: @screen-md-min) {
+//     .c-banner {}
+// }
