--- a/generators/app/templates/static/src/less/components/app-footer.less
+++ b/generators/app/templates/static/src/less/components/app-footer.less
@@ -1,5 +1,18 @@
+//# Aplication footer
 //
-// Aplication footer
-// ----------------------------------
+//*
 
 // .c-app-footer {}
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {
+//     .c-app-footer {}
+// }
+
+// @media screen and (min-width: @screen-md-min) {
+//     .c-app-footer {}
+// }
