--- a/generators/app/templates/static/src/less/components/app-icons.less
+++ b/generators/app/templates/static/src/less/components/app-icons.less
@@ -1,9 +1,30 @@
+//# Icons
 //
-// Icons
-// --------------------
+//*
+
+
+//## Base
+//
+//*
 
 .icon {
-	display: inline-block;
-	vertical-align: top;
-	&:extend(.text-hide);
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    &:extend(.text-hide);
 }
+
+
+//## Custom
+//
+//*
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {}
+
+// @media screen and (min-width: @screen-md-min) {}
