--- a/generators/app/templates/static/src/less/components/grid.less
+++ b/generators/app/templates/static/src/less/components/grid.less
@@ -1,8 +1,25 @@
+//# Grid
 //
-// Grid
-// -------------------
+//*
+
+
+//# Global
+//
+//* Base classes
 
 body {
-	max-width: 100%;
+    max-width: 1920px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+// .o-wrap {}
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {}
+
+// @media screen and (min-width: @screen-md-min) {}
