--- a/generators/app/templates/static/src/less/components/scaffolding.less
+++ b/generators/app/templates/static/src/less/components/scaffolding.less
@@ -1,12 +1,31 @@
+//# Scaffolding
 //
-// Scaffolding
-// -----------------
+//* Reset
 
 
-// Transitions
-// ---------------------------------
+//## Controls and links
+//
+//*
 
 button,
 a {
-	transition: @transition-duration-base;
+    transition: @transition-base;
 }
+
+
+//## Forms
+//
+//*
+
+textarea {
+    resize: vertical;
+}
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {}
+
+// @media screen and (min-width: @screen-md-min) {}
