--- a/generators/app/templates/static/src/less/components/utilities.less
+++ b/generators/app/templates/static/src/less/components/utilities.less
@@ -1,15 +1,29 @@
+//# Utilities
+//
+//*
+
+
 .u-nowrap { // instead </nobr>
-	white-space: nowrap;
+    white-space: nowrap;
 }
 
 .u-text-overflow {
-	.text-overflow();
+    .text-overflow();
 }
 
-// .u-separate-top {
-// 	border-top: 1px solid @gray-lighter;
+// .u-divider-top {
+//     border-top: 1px solid @gray-lighter;
 // }
 
-// .u-separate-bottom {
-// 	border-bottom: 1px solid @gray-lighter;
+// .u-divider-bottom {
+//     border-bottom: 1px solid @gray-lighter;
 // }
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {}
+
+// @media screen and (min-width: @screen-md-min) {}
