--- a/generators/app/templates/static/src/less/vars-app.less
+++ b/generators/app/templates/static/src/less/vars-app.less
@@ -1,50 +1,50 @@
+//# Application variables
 //
-// Variables APP
-// ------------------------
+//*
 
 
-//== Colors
+//## Colors
 //
-//## Gray and brand colors for use across Bootstrap.
+//* Gray and brand colors for use across Bootstrap.
 
-@text-color-light:       (#fff - @text-color);
+@text-color-light:      (#fff - @text-color);
 
 
-//== Scaffolding
+//## Scaffolding
 //
-//## Settings for some of the most global styles.
+//* Settings for some of the most global styles.
 
-//** Variables are better way to control `font-weight`
-@text-light:     300;
-@text-normal:    400;
-@text-bold:      700;
+//** User accessibility
+@tappable-size:         44px;
+@link-indent-inline:    4px;
 
-//** Global/default transition-duration for links, buttons and some interactive elements
-@transition-duration-base:        .3s;
+//** Global/default transition-duration for links, buttons, controls etc.
+@transition-base:       .3s;
 
 
-//== Typography
+//## Typography
 //
-//##
+//*
 
-@line-height-compudet-sm:     floor(@line-height-computed);
+@line-height-compudet-sm:       floor(@line-height-computed / 2);
+@line-height-compudet-lg:       (@line-height-computed + @line-height-compudet-sm);
 
 
-//== Grid
+//## Grid
 //
-//##
+//*
 
-@grid-gutter-width-sm:        floor(@grid-gutter-width / 2);
+@grid-gutter-width-sm:      floor(@grid-gutter-width / 2);
+@grid-gutter-width-lg:      (@grid-gutter-width + @grid-gutter-width-sm);
 
 
-//==
+//## Helpers
 //
-//##
+//*
 
-//** Fixed components
-// Insert the height of the finished component (necessarily)
-// @app-banner-height:            auto; // reserved
-// @app-footer-height:            auto; // reserved
+//** Components dimensions
+// @banner-height:              auto; // reserved
+// @app-footer-height:          auto; // reserved
 //** Media queries breakpoints
-// @screen-sticky-banner:         0px; // reserved
-// @screen-sticky-footer:         0px; // reserved
+// @screen-sticky-banner:       0px; // reserved
+// @screen-sticky-footer:       0px; // reserved
