--- a/generators/app/templates/static/src/less/atom/definition-lists.less
+++ b/generators/app/templates/static/src/less/atom/definition-lists.less
@@ -1,35 +1,48 @@
+//# Definition list
 //
-// Definition list (Bootstrap extension)
-// ------------------------
+//* Bootstrap extension
 
-// BS extension
+
+//## Horizontal lists
+//
+//* Small/large variant
+
 @media (min-width: @grid-float-breakpoint) {
-	.dl-horizontal-sm {
-		dt {
-			width: @dl-sm-dt-width;
-		}
+    .dl-horizontal-sm {
+        dt {
+            width: @dl-sm-dt-width;
+        }
 
-		dd {
-			margin-left: @dl-sm-dt-width + (@grid-gutter-width / 2);
-		}
-	}
+        dd {
+            margin-left: @dl-sm-dt-width + (@grid-gutter-width / 2);
+        }
+    }
 
-	.dl-horizontal-lg {
-		dt {
-			width: @dl-lg-dt-width;
-		}
+    .dl-horizontal-lg {
+        dt {
+            width: @dl-lg-dt-width;
+        }
 
-		dd {
-			margin-left: @dl-lg-dt-width + (@grid-gutter-width / 2);
-		}
-	}
+        dd {
+            margin-left: @dl-lg-dt-width + (@grid-gutter-width / 2);
+        }
+    }
 }
 
-// Pairwise definition list
-//
-// Breaking row after </dd> even if </dt>, </dd> are display: inline/inline-block;
 
-.dl-couple dd:after {
-	content: '\A';
-	white-space: pre;
+//## Pairwise definition list
+//
+//* Breaking row after </dd> even if </dt>, </dd> are `display: inline`.
+//* Note: not working on `inline-block`
+
+.dl-couple {
+    dt,
+    dd {
+        display: inline;
+    }
+
+    dd:after {
+        content: '\A';
+        white-space: pre;
+    }
 }
