--- a/generators/app/templates/static/src/less/atom/mixins/labels.less
+++ b/generators/app/templates/static/src/less/atom/mixins/labels.less
@@ -1,22 +1,26 @@
+//# Labels
 //
-// Labels
-// ----------------------------
+//*
 
-// Required
+
+//## Required
+//
+//* Required state. Red `*` by default
+
 .required(@position) {
-	& when (@position = left) {
-		&:before {
-			content: @required-mark;
-			color: @required-mark-color;
-			padding-right: @required-mark-indent;
-		}
-	}
+    & when (@position = left) {
+        &:before {
+            content: @required-mark;
+            color: @required-mark-color;
+            padding-right: @required-mark-indent;
+        }
+    }
 
-	& when (@position = right) {
-		&:after {
-			content: @required-mark;
-			color: @required-mark-color;
-			padding-left: @required-mark-indent;
-		}
-	}
+    & when (@position = right) {
+        &:after {
+            content: @required-mark;
+            color: @required-mark-color;
+            padding-left: @required-mark-indent;
+        }
+    }
 }
