--- a/generators/app/templates/static/src/less/components/type.less
+++ b/generators/app/templates/static/src/less/components/type.less
@@ -1,3 +1,12 @@
-textarea {
-	resize: vertical;
-}
+//# Typography
+//
+//*
+
+
+//## Media
+//
+//*
+
+// @media screen and (max-width: @screen-sm-max) {}
+
+// @media screen and (min-width: @screen-md-min) {}
