--- a/generators/app/templates/static/src/less/vars-atom.less
+++ b/generators/app/templates/static/src/less/vars-atom.less
@@ -1,29 +1,29 @@
+//# Variables ATOM
 //
-// Variables ATOM
-// ------------------------
+//* Bootstrap variables.less required
 
 
-//== Scaffolding
+//## Scaffolding
 //
-//## Settings for some of the most global styles.
+//* Settings for some of the most global styles.
 
 //** Link border width
-@link-border-width:            1px;
+@link-border-width:         1px;
 //** Link border color
-@link-border-color:            fade(@brand-primary, 50%);
+@link-border-color:         fade(@brand-primary, 50%);
 //** Link hover border color
-@link-hover-border-color:      @link-hover-color;
+@link-hover-border-color:       @link-hover-color;
 //** Text link border-color
-@link-text-border-color:       fade(@text-color, 40%);
+@link-text-border-color:        fade(@text-color, 40%);
 //** Link with action border style
-@link-action-style:            dotted;
+@link-action-style:             dotted;
 //** Top shift of icon inside link w/ title
-@link-icon-shift:              -7px;
+@link-icon-shift:           -7px;
 
 
-//== Close
+//## Close
 //
-//## Close icon based on CSS (easy way of sizing and coloring)
+//* Close icon based on CSS (easy way of sizing and coloring)
 
 //** Size
 @close-stick:          31px;
@@ -33,52 +33,57 @@
 @close-color-active:   @brand-danger;
 
 
-//== Addon
+//## Addon
 //
-//##
+//*
 
 @addon-width:      20px;
 @addon-indent:     5px; // addon indent on both sides (left, right)
 @addon-opacity:    .3;
 
 
-//== Type
+//## Type
 //
-//##
+//*
 
-//** Dl horizontal sizing
+//### Dl horizontal sizing
 // BS by default: `@component-offset-horizontal:  180px;`
 @dl-sm-dt-width:        floor(@component-offset-horizontal * 2/3); // 120px
 @dl-lg-dt-width:        ceil(@component-offset-horizontal * 4/3); // 240px
 
-// Links
-@transition-duration-base:     .3s;
+//### Links
 @link-hover-border-color:      @link-hover-color;
 @link-border-color:            fade(@brand-primary, 50%);
-@link-inline-indent:           7px;
 
 
-//== Forms
+//## Forms
 //
-//##
+//*
 
-//** Base
+
+//### Base
 
 @control-border-width:     1px; // default border-width for bootstrap controls and buttons
-@control-text-indent:      @link-inline-indent;
+@control-text-indent:      (10px - @link-indent-inline);
 
-//** Required state (label)
+
+//### Required state (label)
+
 @required-mark:                 '*';
 @required-mark-color:           @brand-danger;
-@required-mark-indent:          @link-inline-indent;
+@required-mark-indent:          (10px - @link-indent-inline);
 @required-mark-position:        right; // available: right, left
 
-//** Checkboxes & Radios (customize)
+
+//### Checkboxes & Radios (customize)
+
 @control-bg:                       @input-bg;
 @control-indicator-border-width:   @control-border-width;
 @control-border-color:             @input-border;
 
-//** Checkboxes
+
+//### Checkboxes
+
 @checkbox-size:           22px;
 @checkbox-radius:         4px;
 // CSS checkmark (✔) options
@@ -96,19 +101,24 @@
 @check-shift-bottom:       2px; // can't be a negative value
 @check-shift-horizontal:   0;
 
-//** Radios
+
+//## Radios
+
 @radio-size:                 @checkbox-size;
 @radio-indicator-space:      2px;
 @radio-indicator-color:      @check-color;
 
-//** Files (upload)
+
+//## Files (upload)
+
 @file-focus-space:     3px;
 @file-name-color:      @text-color;
 
 
-//** Russian ruble symbol (₽)
+//## Russian ruble symbol (₽)
 //
-// Available font families:
+//* Available font families:
+
 // a — Arial Regular (sans-serif)
 // b — Arial Italic
 // c — Arial Bold
@@ -131,22 +141,34 @@
 @rub:  'p';
 
 
-//** Loading state
+//## Loading state
+//
+//*
+
 @loader-bg:             #fff;
 @loader-width:          128px;
 @loader-img:            ~'preloader-default.gif';
 @loading-bg:            fade(#000, 40%);
 
 
-//** Slick (carousel) theme
-// arrows
+//## Slick carousel
+//
+//*
+
+
+//### arrows
+
+@arrows-fullscreen:                false;
 @btn-arrow-width:                  50px;
 @btn-arrow-height:                 @btn-arrow-width;
 @btn-arrow-bg:                     @body-bg;
 @btn-arrow-position-top:           50%;
 @btn-arrow-prev-position-left:     0;
 @btn-arrow-next-position-right:    0;
-// dots
+
+
+//### dots
+
 @nav-dots:                    false; // arrows position are related to nav dots wrapper height
 @nav-dots-wrap-height:        60px;
 @nav-dot-size:                15px;
